<resources>
    <string name="app_name">DStory</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="got_no_accounts_yet">Got no accounts yet?</string>
    <string name="email">E-mail</string>
    <string name="loading">Loading…</string>
    <string name="name">Name</string>
    <string name="got_an_account">Got an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="add">Add</string>
    <string name="stories">Stories</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="signout_confirmation">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_stories_available">No stories available</string>
    <string name="add_new_story">Add new story</string>
    <string name="story_image">Story image</string>
    <string name="password_invalid">Password is invalid</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="retry">Retry</string>
    <string name="story_not_found">Story is not found</string>
    <string name="description">Description</string>
    <string name="maps">Maps</string>
    <string name="share_current_location">Share current location</string>
</resources>